crates/php-parser/tests/snapshots/integration__if_missing_condition.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php if { }

=== errors ===
expected '(', found '{'
expected expression
unclosed '')'' opened at Span { start: 9, end: 10 }
expected statement
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "ArrayAccess": {
                "array": {
                  "kind": "Error",
                  "span": {
                    "start": 9,
                    "end": 10
                  }
                },
                "index": null
              }
            },
            "span": {
              "start": 9,
              "end": 13
            }
          },
          "then_branch": {
            "kind": "Error",
            "span": {
              "start": 13,
              "end": 13
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 6,
        "end": 13
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 13
  }
}
