crates/php-parser/tests/snapshots/integration__if_unclosed_condition.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php if ( { }

=== errors ===
expected expression
unclosed '')'' opened at Span { start: 9, end: 10 }
expected statement
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "ArrayAccess": {
                "array": {
                  "kind": "Error",
                  "span": {
                    "start": 11,
                    "end": 12
                  }
                },
                "index": null
              }
            },
            "span": {
              "start": 11,
              "end": 15
            }
          },
          "then_branch": {
            "kind": "Error",
            "span": {
              "start": 15,
              "end": 15
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 6,
        "end": 15
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 15
  }
}
