crates/php-parser/tests/snapshots/integration__immediately_invoked_closure.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php (function() { echo 'hi'; })();
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Parenthesized": {
                    "kind": {
                      "Closure": {
                        "is_static": false,
                        "by_ref": false,
                        "params": [],
                        "use_vars": [],
                        "return_type": null,
                        "body": [
                          {
                            "kind": {
                              "Echo": [
                                {
                                  "kind": {
                                    "String": "hi"
                                  },
                                  "span": {
                                    "start": 25,
                                    "end": 29
                                  }
                                }
                              ]
                            },
                            "span": {
                              "start": 20,
                              "end": 31
                            }
                          }
                        ],
                        "attributes": []
                      }
                    },
                    "span": {
                      "start": 7,
                      "end": 32
                    }
                  }
                },
                "span": {
                  "start": 6,
                  "end": 33
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 6,
            "end": 35
          }
        }
      },
      "span": {
        "start": 6,
        "end": 36
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 36
  }
}
