crates/php-parser/tests/snapshots/integration__incomplete_ternary.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php $x ?

=== errors ===
expected expression
expected ':', found end of file
expected expression
expected ';' after expression
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Ternary": {
              "condition": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "then_expr": {
                "kind": "Error",
                "span": {
                  "start": 11,
                  "end": 11
                }
              },
              "else_expr": {
                "kind": "Error",
                "span": {
                  "start": 11,
                  "end": 11
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 11
          }
        }
      },
      "span": {
        "start": 6,
        "end": 11
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 11
  }
}
