crates/php-parser/tests/snapshots/integration__inline_html_in_function_body.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
function tmpl() {
    $x = foo();
    ?>
<div>html</div>
<?php
    bar();
}
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "tmpl",
          "params": [],
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Assign": {
                      "target": {
                        "kind": {
                          "Variable": "x"
                        },
                        "span": {
                          "start": 28,
                          "end": 30
                        }
                      },
                      "op": "Assign",
                      "value": {
                        "kind": {
                          "FunctionCall": {
                            "name": {
                              "kind": {
                                "Identifier": "foo"
                              },
                              "span": {
                                "start": 33,
                                "end": 36
                              }
                            },
                            "args": []
                          }
                        },
                        "span": {
                          "start": 33,
                          "end": 38
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 28,
                    "end": 38
                  }
                }
              },
              "span": {
                "start": 28,
                "end": 44
              }
            },
            {
              "kind": {
                "InlineHtml": "\n<div>html</div>\n"
              },
              "span": {
                "start": 46,
                "end": 63
              }
            },
            {
              "kind": "Nop",
              "span": {
                "start": 73,
                "end": 76
              }
            },
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "FunctionCall": {
                      "name": {
                        "kind": {
                          "Identifier": "bar"
                        },
                        "span": {
                          "start": 73,
                          "end": 76
                        }
                      },
                      "args": []
                    }
                  },
                  "span": {
                    "start": 73,
                    "end": 78
                  }
                }
              },
              "span": {
                "start": 73,
                "end": 80
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 81
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 81
  }
}
